[gd_scene load_steps=3 format=3 uid="uid://dfqieuig2t2dt"]

[ext_resource type="Script" uid="uid://cne3ccfkbv80k" path="res://Scripts/Game2.gd" id="1_afqo3"]
[ext_resource type="Script" uid="uid://cth4834rvdvos" path="res://Scripts/Gens.gd" id="2_whh81"]

[node name="Game2" type="Node2D"]
script = ExtResource("1_afqo3")

[node name="LeavesArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="MainArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Clicker" type="Button" parent="MainArea"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -129.5
offset_top = -172.0
offset_right = 129.5
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 56
text = "CLICK ME"

[node name="Score" type="Label" parent="MainArea"]
layout_mode = 0
offset_right = 2271.7551
offset_bottom = 111.0
scale = Vector2(0.5070969, 0.5070969)
theme_override_font_sizes/font_size = 81
text = "Leaves: 0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainArea"]
layout_mode = 0
offset_top = 52.0
offset_right = 186.0
offset_bottom = 648.0

[node name="ClickPower" type="Button" parent="MainArea/VBoxContainer"]
layout_mode = 2
text = "MORE CLICK POWER!
COST: 100 Leaves"

[node name="ClickPower2" type="Button" parent="MainArea/VBoxContainer"]
layout_mode = 2
text = "EVEN MORE CLICK
POWER!!!
COST: 2500 Leaves"

[node name="GenSpeeds" type="Button" parent="MainArea/VBoxContainer"]
layout_mode = 2
text = "GEN SPEEDS
COST: 800 Leaves"

[node name="GenSpeeds2" type="Button" parent="MainArea/VBoxContainer"]
layout_mode = 2
text = "GEN SPEEDS AGAIN
COST: 5000 Leaves"

[node name="LeUpgrades" type="Label" parent="MainArea"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(0.32912734, 0.32912734)
theme_override_font_sizes/font_size = 91
text = "Le Upgrades"

[node name="GensArea" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="GensArea"]
layout_mode = 0
offset_top = 51.0
offset_right = 333.0
offset_bottom = 649.0

[node name="Gen1" type="Button" parent="GensArea/VBoxContainer"]
layout_mode = 2
text = "GENERATOR 1
GENERATES 2 LEAVES A SECOND
COST: 75 LEAVES"

[node name="Gen2" type="Button" parent="GensArea/VBoxContainer"]
layout_mode = 2
text = "GENERATOR 2
GENERATES 5 LEAVES A SECOND
COST: 200 LEAVES"

[node name="Gen3" type="Button" parent="GensArea/VBoxContainer"]
layout_mode = 2
text = "GENERATOR 3
GENERATES 15 LEAVES A SECOND
COST: 5000 LEAVES"

[node name="Gen4" type="Button" parent="GensArea/VBoxContainer"]
layout_mode = 2
text = "GENERATOR 2
GENERATES 50 LEAVES A SECOND
COST: 25000 LEAVES"

[node name="Gen5" type="Button" parent="GensArea/VBoxContainer"]
layout_mode = 2
text = "GENERATOR 2
GENERATES 500 LEAVES A SECOND
COST: 50000 LEAVES"

[node name="Gen6" type="Button" parent="GensArea/VBoxContainer"]
layout_mode = 2
text = "GENERATOR 2
GENERATES 6700 LEAVES A SECOND
COST: 75000 LEAVES"

[node name="VBoxContainer2" type="VBoxContainer" parent="GensArea"]
visible = false
layout_mode = 0
offset_left = 417.0
offset_top = 54.0
offset_right = 750.0
offset_bottom = 649.0

[node name="Button" type="Button" parent="GensArea/VBoxContainer2"]
layout_mode = 2

[node name="Gens" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 949.0
offset_top = 267.5
offset_right = 1449.0
offset_bottom = 380.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.40298182, 0.40298182)
theme_override_font_sizes/font_size = 76
text = "GENERATORS"
script = ExtResource("2_whh81")

[node name="Generator" type="Timer" parent="."]
autostart = true

[node name="MENU" type="Button" parent="."]
offset_left = 852.0
offset_right = 1570.0
offset_bottom = 99.0
scale = Vector2(0.41565102, 0.41565102)
theme_override_font_sizes/font_size = 66
text = "LEAVE TO MAIN MENU"

[connection signal="pressed" from="MainArea/Clicker" to="." method="_on_clicker_pressed"]
[connection signal="pressed" from="MainArea/VBoxContainer/ClickPower" to="." method="_on_click_power_pressed"]
[connection signal="pressed" from="MainArea/VBoxContainer/ClickPower2" to="." method="_on_click_power_2_pressed"]
[connection signal="pressed" from="MainArea/VBoxContainer/GenSpeeds" to="." method="_on_gen_speeds_pressed"]
[connection signal="pressed" from="MainArea/VBoxContainer/GenSpeeds2" to="." method="_on_gen_speeds_2_pressed"]
[connection signal="pressed" from="GensArea/VBoxContainer/Gen1" to="." method="_on_gen_1_pressed"]
[connection signal="pressed" from="GensArea/VBoxContainer/Gen2" to="." method="_on_gen_2_pressed"]
[connection signal="pressed" from="GensArea/VBoxContainer/Gen3" to="." method="_on_gen_3_pressed"]
[connection signal="pressed" from="GensArea/VBoxContainer/Gen4" to="." method="_on_gen_4_pressed"]
[connection signal="pressed" from="GensArea/VBoxContainer/Gen5" to="." method="_on_gen_5_pressed"]
[connection signal="pressed" from="GensArea/VBoxContainer/Gen6" to="." method="_on_gen_6_pressed"]
[connection signal="pressed" from="Gens" to="Gens" method="_on_pressed"]
[connection signal="timeout" from="Generator" to="." method="_on_generator_timeout"]
[connection signal="pressed" from="MENU" to="." method="_on_menu_pressed"]
